// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  className="button "
  style={Object {}}
/>
`;

exports[`renders without crashing with size 1`] = `
<div
  className="button "
  style={
    Object {
      "height": "11px",
      "lineHeight": "11px",
      "width": "11px",
    }
  }
/>
`;

exports[`renders without crashing with text and icon 1`] = `
<div
  className="button "
  style={
    Object {
      "height": "11px",
      "lineHeight": "11px",
      "width": "11px",
    }
  }
>
  <span>
    Mock
  </span>
  <span
    className="icon Mock "
    style={Object {}}
  />
</div>
`;
